fix too long time to get to the data views

--- a/src/style.css
+++ b/src/style.css
@@ -103,7 +103,7 @@ body
     /*background: #00000077;*/
     /*border: 1px solid #ffffff77;*/
     /*border-radius: 4px;*/
-    color: #ff0000;
+    color: #000000;
     font-family: Helvetica, Arial, sans-serif;
     text-align: center;
     line-height: 1.3em;
@@ -140,7 +140,7 @@ body
     /*background: #00000077;*/
     /*border: 1px solid #ffffff77;*/
     /*border-radius: 4px;*/
-    color: #ff0000;
+    color: #000000;
     font-family: Helvetica, Arial, sans-serif;
     text-align: center;
     line-height: 1.3em;
